Sesion 5 endpoints
