# src/controller/interfaces/index.ts
@@ -8,3 +8,14 @@ export interface IHelloController {
 export interface IGoodbyeController {
     getMessDate(name?:string): Promise<ResponseMDate>
 }
+
+export interface IUserController {
+    // Read all users from db or get users by id
+    getUsers(id: String): Promise<any>
+    // Delet User by ID
+    deleteUser(id: String): Promise<any>
+    // Create new User
+    createUser(user: any): Promise<any>
+    // Update User
+    updateUser(id: String, user: any): Promise<any>
+}
