# src/routes/index.ts
@@ -6,6 +6,7 @@
 import express, { Request, Response } from 'express'
 import helloRouter from './HelloRouter'
 import goodbyeRouter from './GoodbyeRouter'
+import usersRouter from './UserRouter'
 import { LogInfo } from '../utils/logger'
 
 // Server instance
@@ -27,6 +28,7 @@ rootRouter.get('/', (req: Request, res: Response) => {
 server.use('/', rootRouter) // http://localhost:8000/api/
 server.use('/hello', helloRouter) // http://localhost:8000/api/hello --> HelloRouter
 server.use('/goodbye', goodbyeRouter) // http://localhost:8000/api/goodbye --> HelloRouter
+server.use('/users', usersRouter) // http://localhost:8000/api/users --> UserRouter
 // Add more routes to the app
 
 export default server
